# discord-tft-api

./: README.md  pyproject.toml  temp.json
app/: __init__.py  main.py
app/models/: riot_user.py
app/routes/: league.py  riot_integration.py  tft.py
app/services/: ddragon_league.py  riot_accounts.py  tft_service.py
app/utils/: fetch_secrets.py
